--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
       </header>
       <main>
           <section id="headings" class="headings">
+              <div>
+
+                <h1><B>ENGINEERING PHYSICS</B></h1>
+
+              </div>
+              <div>
+                  
+                <h3><B>Digital Assignment - 2</B></h3>
+
+              </div>
+              <div>
+              <h4><B><i>Carbon-based nanomaterials nd their applications</i></B></h4>
+            </div>
 
 
 
