--- a/index.html
+++ b/index.html
@@ -26,10 +26,35 @@
               <h4><B><i>Carbon-based nanomaterials nd their applications</i></B></h4>
             </div>
 
+          </section>
+        <br>
+          <section id="body" class="body">
 
+              <div id="CNT">
+                <h3>Carbon nanotubes</h3>
+                <ul>
+
+                    <li><h3>Batteries and Capacitors</h3>
+                        <p>Batteries and capacitors are the most important energy storage devices we use and carbon nanotubes 
+                            can help us here as well.CNTs have intrinsic properties which can be the materials for the use as 
+                            electrodes in capacitors and batteries. The properties of CNTs which will be useful are good electrical
+                             conductivity , high surface area , and most importantly its linear geometry which makes their surface very 
+                             accessible for the electrolyte.Research has demonstrated that CNTs have the highest reversible capacity of 
+                             any carbon material for use in lithium-ion batteries. Moreover, CNTs are excellent materials for supercapacitor 
+                             electrodes.CNTs can also be used for fuel cell components. The properties like high thermal conductivity 
+                             and surface area will be helpful in PEM fuel cells. Because of its high electrical conductivity, it can 
+                             be used in gas diffusion layers.As CNTs are hard and has high strength so it can be used as a part of 
+                             composite components in fuel cells which are used in transport applications. 
+                        </p>
+                    
+                    </li>
+
+                </ul>
+                
+
+              </div>
 
           </section>
-          <section></section>
 
 
 
