added CNT 2 and images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <h3>Carbon nanotubes</h3>
                 <ul>
 
-                    <li><h3>Batteries and Capacitors</h3>
+                    <li>
+                        <h3>Batteries and Capacitors</h3>
                         <p>Batteries and capacitors are the most important energy storage devices we use and carbon nanotubes 
                             can help us here as well.CNTs have intrinsic properties which can be the materials for the use as 
                             electrodes in capacitors and batteries. The properties of CNTs which will be useful are good electrical
@@ -50,6 +51,23 @@
                         </p>
                     
                     </li>
+                    <li>
+                        <h3>Conductive pastics</h3>
+                        <p>Plastics have been used extensively for the past few decades and plastics have evolved as the substitute for 
+                            metals.But plastics lack electrical conductivity. Plastics are very good electrical insulators.But we can make 
+                            plastics by loading plastics up with conductive fillers, such as carbon black and larger graphite fiber.In order 
+                            to offer the necessary conductivity using conventional fillers, the loading required is typically high, but 
+                            leading to heavy parts can degrade the structural properties of plastic. As the aspect ratio of filler particles
+                             becomes high, the loading required to achieve a given level of conductivity becomes low. CNTs can be used here as
+                            it has the highest aspect ratio of any carbon fiber. It also has a natural tendency to form ropes which provides 
+                            inherently very long conductive pathways even at ultra-low loadings.This behavior of CNTs is utilized in applications
+                            such as electrostatic dissipation (ESD), EMI/RFI shielding composites.
+
+                        </p>
+
+                    </li>
+
+                    <img src="image.jpeg" alt="Carbon nanotubes" width="300px">
 
                 </ul>
                 
@@ -66,4 +84,3 @@
   </html>
 
 
-  
